--- a/exer07-ui/webapp/i18n/i18n.properties
+++ b/exer07-ui/webapp/i18n/i18n.properties
@@ -1,3 +1,32 @@
-title=Title
-appTitle=exer07-ui
+title=Welcome
+appTitle=test-mta
 appDescription=App Description
+details=Details
+
+orderTableTitle=Orders
+productTableTitle=Products
+orders=Orders
+orderId=Order ID
+customerId=Customer ID
+employeeId=Employee ID
+orderDate=Order Date
+requiredDate=Required Date
+shipName=Ship Name
+shippedDate=Shipped Date
+shipVia=Ship Via
+freight=Freight
+shipAddress=Ship Address
+shipCity=Ship City
+shipRegion=Ship Region
+shipPostalCode=Ship Postal Code
+shipCountry=Ship Country
+
+orderSearchPlaceholder=Search by Customer ID or Employee ID
+productDetails=Product Details
+productId=ID
+productName=Name
+supplierId=Supplier ID
+categoryId=Category ID
+quantityPerUnit=Quantity per Unit
+unitPrice=Unit Price
+productSearchPlaceholder=Search by Name
